@@ -61,22 +61,6 @@ AC_SUBST(LIBRSVG_CFLAGS)
 
 dnl ===========================================================================
 
-PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 1.3.12,,
-                  AC_MSG_ERROR([GTK+-2.0 is required to compile gtk-engines]))
-
-GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
-AC_SUBST(GTK_CFLAGS)
-AC_SUBST(GTK_LIBS)
-AC_SUBST(GTK_VERSION)
-
-dnl ===========================================================================
-
-PKG_CHECK_MODULES(GDK_PIXBUF, gdk-pixbuf-2.0,,)
-AC_SUBST(GDK_PIXBUF_CFLAGS)
-AC_SUBST(GDK_PIXBUF_LIBS)
-			      
-dnl ===========================================================================
-
 AC_CHECK_LIB(popt, poptParseArgvString, [POPT_LIBS="-lpopt"],
 AC_MSG_ERROR([popt 1.5 or newer is required to build librsvg.
 You can download the latest version from ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/]))
@@ -156,14 +140,21 @@ else
 fi
 
 AC_ARG_ENABLE(gtk-theme,
-    [  --enable-gtk-theme  Enable a RSVG based GTK+ theme engine [default=auto]],
-    enable_gtk_theme="$enableval", enable_gtk_theme=auto)
+    [  --enable-gtk-theme  Enable a RSVG based GTK+ theme engine [default=auto]],,
+    enable_gtk_theme=yes)
 
-if test x$enable_gtk_theme = xauto ; then
-    enable_gtk_theme=yes
+if test "x$enable_gtk_theme" = "xyes"; then
+	AC_MSG_CHECKING([for gtk+ engine support])
+	PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 1.3.12, enable_gtk_theme=yes,
+        	enable_gtk_theme=no)
+	AC_MSG_RESULT([$enable_gtk_theme])
+GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
+AC_SUBST(GTK_CFLAGS)
+AC_SUBST(GTK_LIBS)
+AC_SUBST(GTK_VERSION)
 fi
 
-AM_CONDITIONAL(ENABLE_GTK_ENGINE, test x$enable_gtk_theme = xyes)
+AM_CONDITIONAL(ENABLE_GTK_ENGINE, test "x$enable_gtk_theme" = "xyes")
 
 AC_PATH_PROG(QUERYLOADERS, gdk-pixbuf-query-loaders, true)
 
